@@ -113,6 +113,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27517: LZMA compressor and decompressor no longer raise exceptions if
+  given empty data twice.  Patch by Benjamin Fogle.
+
 - Issue #28549: Fixed segfault in curses's addch() with ncurses6.
 
 - Issue #28449: tarfile.open() with mode "r" or "r:" now tries to open a tar
